# whisper_patcher

./: .env.example  .gitignore  README.md  pyproject.toml  tox.ini
data/: word_bank.json
playground/: config.py  main.py  try_gpu.py  word_bank.py  word_bank_compiler.py
